frontend_tests/negative/duplicate_struct_field/cmd/app/main.go
package main

type point struct {
	X, X int
}

func main() {}
